# hosutory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  db.sh  gui.py  main.py  pyproject.toml  run.py  run_scrape.py  run_view.py  scrape.sh  search_song.py
hosutory/: project.py  scrape.py  test_project.py
hosutory/db_gui_elements/: elements.py
hosutory/scrape_gui_elements/: gui_logic.py
hosutory/songs/4836880/: songs0.json  songs1.json  songs2.json
scrape_osu_songs/: db_gui.py  headers.json  main.py  scrape.py  scrape_gui.py  search_song.py
scrape_osu_songs/db/: search_db.py  sql_query.py
scrape_osu_songs/db/database_file/: osu_songs.db
scrape_osu_songs/db_gui_elements/: elements.py  gui_logic.py
scrape_osu_songs/scrape_gui_elements/: elements.py
