[tool.poetry]
name = "scrape-osu-songs"
version = "0.1.0"
description = ""
authors = ["heko <91366057+hkohko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
pysimplegui = "^4.60.5"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
