[tool.poetry]
name = "scrape-osu-songs"
version = "0.1.0"
description = ""
authors = ["heko <91366057+hkohko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
pysimplegui = "^4.60.5"
pre-commit = "^3.4.0"



[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "heko", email = "91366057+hkohko@users.noreply.github.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "httpx<1.0.0,>=0.25.0",
    "tqdm<5.0.0,>=4.66.1",
    "tabulate<1.0.0,>=0.9.0",
    "pysimplegui<5.0.0,>=4.60.5",
    "pre-commit<4.0.0,>=3.4.0",
    "pyperclip>=1.8.2",
    "pytest>=7.4.4",
]
name = "scrape-osu-songs"
version = "0.1.0"
description = ""
readme = "README.md"
